# everything-sys-rs

./: Cargo.toml  LICENSE  README.md  build.rs
Everything/include/: Everything.h
examples/: search.rs
src/: bindings.h  lib.rs
