[package]
name = "everything-sys"
description = "VoidTools' Everything C-bindings in Rust"
version = "0.1.3"
authors = ["Jari Pennanen <ciantic@oksidi.com>"]
edition = "2018"
include = ["src/**/*", "Everything/**/*", "build.rs", "Cargo.toml"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Ciantic/everything-sys-rs/"
keywords = ["windows"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["windef"] }

[build-dependencies]
bindgen = "0.57"
cc = "1.0"

[dev-dependencies]
widestring = "0.4"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
rustc-args = ["--cfg",  "running_inside_docs_rs"]
rustdoc-args = ["--cfg", "running_inside_docs_rs"]